Update the HTML for Page-Selector

--- a/ipadmin/admin.html
+++ b/ipadmin/admin.html
@@ -36,6 +36,6 @@
 	</div>
 
 	<div class="foot">
-		<span>©2017 <a href="https://github.com/Hfhui/ipcheck.git">IpCheck V0.2</a> huangfuhui@outlook.com</span>
+		<span>©2017 <a href="https://github.com/Hfhui/ipcheck.git">IpCheck0.2</a> huangfuhui@outlook.com</span>
 	</div>
 </body>
